--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ animation: count 200ms ease-in-out;
     font-size: 2em;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 #incorrect {
@@ -78,8 +78,12 @@ animation: count 200ms ease-in-out;
     letter-spacing: .2em;
     width: 100%;
     height: 50%;
-    object-fit: contain;
-}
+    display: flex;
+    margin: 0;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #ccc;;
+    color: rgba(0,0,0,.7)}
 .wrapper {
     position: relative;
     width: 90vw;
@@ -104,7 +108,7 @@ animation: count 200ms ease-in-out;
     width: 25%;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 0;
     background-color: aliceblue;
     border: 10px solid red;
     border-radius: 10px;
