--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 body {
     font-family: 'Slackey';
     background: skyblue;
+    overflow: hidden;
 }
 h1, #jumbo {
     font-size: 5em;
@@ -82,8 +83,9 @@ animation: count 200ms ease-in-out;
     margin: 0;
     justify-content: space-around;
     align-items: center;
-    background-color: #ccc;;
-    color: rgba(0,0,0,.7)}
+    background-color: #ccc;
+}
+   
 .wrapper {
     position: relative;
     width: 90vw;
@@ -105,6 +107,7 @@ animation: count 200ms ease-in-out;
     transition-duration: 1.5s;
 }
 .dashboard {
+    color: rgba(0,0,0,.7);
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -124,11 +127,27 @@ table, tr, td, th {
 
 #img-container {
     width: 250px;
-    height: 250px;
+    font-size: 40px;
+    height: 300px;
+    color: rgb(255,203,6);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-.pokeball::after {
-    content: url(../images/Pokeball.svg);
-    width: 10px;
-    height: 10px;
+.pokeball[empty=true]{
+    background-image: url(../images/Pokeball.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 50px;
+    height: 50px;
+}
+.pokeball[empty=false] {
+    background-position: 100vh;
+}
+
+#revealname {
+    position: relative;
+    bottom: -50px;
 }
